# ligthgl

./: LigthGl.sln  README.md
LightGl.Bindings/: LightGl.Bindings.csproj  WebGpuNative.cs
LightGl.Bindings.Example.Desktop/: LightGl.Bindings.Example.Desktop.csproj  Program.cs
LightGl.Bindings.Example.Web/: LightGl.Bindings.Example.Web.csproj  Program.cs
LightGl.Bindings.Example.Web/Properties/: launchSettings.json
LightGl.Bindings.Example.Web/wwwroot/: index.html  main.js
LightGl.Native/: CMakeLists.txt  LightGl.Native.csproj  build-desktop.ps1  build-web.ps1
LightGl.Native/src/: lightgl.cpp  lightgl.h  sandbox.cpp
LigthGl.Bindings/: LightGl.Bindings.csproj  Program.cs  WebGpuWrapper.cs
